# mids-answer-generator

./: .env.example  .gitignore  .replit  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  app.py  app_old.py  debug_ai.py  debug_questions.py  debug_test.py  deploy.sh  docker-compose.yml  pyproject-template.toml  pyproject.toml  replit.md  requirements-github.txt  setup.py  setup.sh  simple_test.py  test_api.py  test_gemini.py  test_pdf_formatting.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
attached_assets/: Pasted--Configuration-Subject-Computer-Science-Answer-Mode-Understand-Mode-Exam-Mo-1754162338285_1754162338286.txt  Pasted-Build-a-Python-web-application-on-Replit-that-serves-as-a-robust-College-Answer-Generator-The-app-1754159468618_1754159468618.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-p-1754407455100_1754407455100.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-p-1754410670271_1754410670272.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-p-1754411435869_1754411435869.txt
data/: .gitkeep
tests/: __init__.py  test_basic.py
utils/: ai_generator.py  history_manager.py  pdf_compiler.py  pdf_processor.py
